<resources>
    <string name="app_name">Olivia_Fabian</string>
    <string name="sallealista">Sallealista</string>
    <string name="logintitle">Log In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="enter">Enter</string>
    <string name="register"><u>Or sign up</u></string>
    <string name="createuser"><u>Create User</u></string>
    <string name="username"><u>Username</u></string>
    <string name="create"><u>Create</u></string>
    <string name="flats"><u>Flats</u></string>
    <string name="ebutton"><u>E</u></string>
    <string name="cbutton"><u>C</u></string>
    <string name="fbutton"><u>F</u></string>
    <string name="description"><u>description</u></string>
    <string name="s100m2"><u>100m2</u></string>
    <string name="price"><u>Price</u></string>
    <string name="details"><u>Details</u></string>
    <string name="shortdescription"><u>Short Description</u></string>
    <string name="size"><u>Size:</u></string>
    <string name="longdescription"><u>Long Description</u></string>
    <string name="setasfavourite"><u>Set as favourite</u></string>
    <string name="askappointment"><u>Ask appointment</u></string>
    <string name="removeasfavourite"><u>Remove as favourite</u></string>
    <string name="askappointmentmessage"><u>Please, select the date of the appointment.</u></string>
    <string name="date"><u>Date</u></string>
    <string name="hour"><u>Hour</u></string>
    <string name="select"><u>Select</u></string>
    <string name="titlulo_pickers">Obtener fecha y hora</string>
    <string name="formato_fecha">dd/mm/yyyy</string>
    <string name="formato_hora">hh:mm</string>
    <string name="dateandtime">Date and Time</string>


</resources>
