<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/lightGrey"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/logo"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/logo"
                android:layout_gravity="center_vertical"
                />
            <TextView
                android:id="@+id/askappointment"
                android:layout_width="wrap_content"
                android:textColor="@color/black"
                android:textSize="25dp"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@id/logo"
                android:layout_centerVertical="true"
                android:text="@string/askappointment"
                android:layout_height="wrap_content" />
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/my_toolbar"
        android:paddingLeft="30dp">
        <TextView
            android:id="@+id/askappointmentmessage"
            android:layout_width="wrap_content"
            android:textColor="@color/black"
            android:textSize="15dp"
            android:text="@string/askappointmentmessage"
            android:layout_height="wrap_content"
            android:paddingTop="80dp"/>
        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:text="@string/date"
            android:layout_height="wrap_content"
            android:layout_below="@id/askappointmentmessage"
            android:paddingTop="30dp"

            />
        <EditText
            android:id="@+id/et_mostrar_fecha_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="date"
            android:hint="@string/formato_fecha"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/date"
            android:layout_below="@id/date"/>

        <TextView
            android:id="@+id/hour"
            android:layout_width="wrap_content"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:text="@string/hour"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_mostrar_fecha_picker"
            android:paddingTop="30dp"/>
        <EditText
            android:id="@+id/et_mostrar_hora_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="time"
            android:hint="@string/formato_hora"
            android:layout_below="@id/hour"/>
        <Button
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/cal"
            android:layout_toRightOf="@id/et_mostrar_fecha_picker"
            android:layout_below="@id/date"
            />
        <Button
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/hour"
            android:layout_toRightOf="@id/et_mostrar_hora_picker"
            android:layout_below="@id/hour"
            />
    </RelativeLayout>



    <Button
        android:id="@+id/select"
        android:layout_width="380dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_height="50dp"
        android:text="@string/select"
        android:layout_marginBottom="5dp"
        android:background="@drawable/button_border"
        android:textSize="20dp"/>

</RelativeLayout>
