<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/logo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@mipmap/ic_launcher"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:layout_gravity="center_vertical"
            />

        <TextView
            android:id="@+id/logintitle"
            android:layout_width="wrap_content"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:layout_gravity="center_vertical"
            android:text="@string/logintitle"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/lightGrey"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="80dp"
        />

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="500dp"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:text="@string/email"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/loginemail"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:backgroundTint="@color/NavyBlue"
            android:inputType="text"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"
            />

        <TextView
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:text="@string/password"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/loginpassword"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:backgroundTint="@color/NavyBlue"
            android:inputType="textPassword"
            />

        <Button
            android:id="@+id/enter"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/enter"
            android:textSize="30dp"/>


        <TextView
            android:id="@+id/loginregister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="@color/IntenseBlue"
            />

    </LinearLayout>




</LinearLayout>