<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >


    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/lightGrey"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
        
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/logo"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/logo"
                android:layout_gravity="center_vertical"
                />
            <TextView
                android:id="@+id/flatsCreation"
                android:layout_width="wrap_content"
                android:textColor="@color/black"
                android:textSize="25dp"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@id/logo"
                android:layout_centerVertical="true"
                android:text="@string/flats"
                android:layout_height="wrap_content" />
            <Button
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/fbutton"
                android:layout_alignParentRight="true"
                android:id="@+id/button_f"
                />
            <Button
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/cbutton"
                android:layout_toLeftOf="@id/button_f"
                android:id="@+id/button_c"/>
            <Button
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/ebutton"
                android:layout_toLeftOf="@id/button_c"
                android:id="@+id/button_e"/>


        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <ListView
        android:id="@+id/listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/my_toolbar"
        >
    </ListView>

</RelativeLayout>
